// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator snapshot alternate 1`] = `
<span
  class="css-1v6ckp3"
/>
`;

exports[`LoadingIndicator snapshot default component wrapping 1`] = `
<div
  class="component"
>
  <span
    class="css-1v6ckp3"
  />
</div>
`;

exports[`LoadingIndicator snapshot primary 1`] = `
<span
  class="css-1xdhyk6"
>
  <span
    class="css-9lxfgy"
  />
  <span
    class="css-malg2r"
  />
  <span
    class="css-1piacs6"
  />
  <span
    class="css-jm3i4v"
  />
  <span
    class="css-1bnq1ww"
  />
</span>
`;
